fix minor layout issues (#365, #367, #371)

--- a/projectroles/static/projectroles/css/projectroles.css
+++ b/projectroles/static/projectroles/css/projectroles.css
@@ -13,6 +13,7 @@
 
 body {
   margin: 0;
+  overflow-x: hidden; /* Fix for DAL select bug (issue #365) */
 }
 
 body,
@@ -160,6 +161,7 @@ div.sodar-page-container {
   line-height: 36px;
   margin: 0;
   background-color: #f5f5f5;
+  overflow-y: hidden;
 }
 
 
